Started polarity/subjectivity scores for sentiment analysis.

--- a/src/news.ipynb
+++ b/src/news.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,8 @@
     "from collections import Counter\n",
     "from tensorflow.keras.preprocessing.text import Tokenizer\n",
     "from nltk.tokenize import word_tokenize\n",
-    "from wordcloud import WordCloud"
+    "from wordcloud import WordCloud\n",
+    "from textblob import TextBlob"
    ]
   },
   {
@@ -1681,6 +1682,256 @@
     "plt.axis(\"off\")\n",
     "plt.imshow(wc)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>source</th>\n",
+       "      <th>topic</th>\n",
+       "      <th>polarity_score</th>\n",
+       "      <th>subjectivity_score</th>\n",
+       "      <th>average_polarity_for_topic</th>\n",
+       "      <th>average_subjectivity_for_topic</th>\n",
+       "      <th>polarity_diff_from_mean</th>\n",
+       "      <th>subjectivity_diff_from_mean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ABC News</td>\n",
+       "      <td>Supreme Court Ruling on Affirmative Action</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>-0.01</td>\n",
+       "      <td>0.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ABC News</td>\n",
+       "      <td>Chinese Surveillance Balloon</td>\n",
+       "      <td>-0.00</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>-0.01</td>\n",
+       "      <td>-0.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ABC News</td>\n",
+       "      <td>Biden's Low Approval Rates in Polls</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.41</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>-0.01</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ABC News</td>\n",
+       "      <td>The Deadliest Attack by Hamas</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ABC News</td>\n",
+       "      <td>Pentagon Documents Leak</td>\n",
+       "      <td>-0.02</td>\n",
+       "      <td>0.27</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>-0.02</td>\n",
+       "      <td>-0.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>ABC News</td>\n",
+       "      <td>George Santos' Expulsion from Congress</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.47</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>-0.03</td>\n",
+       "      <td>0.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>ABC News</td>\n",
+       "      <td>U.S. and Germany Send Tanks to Ukraine</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>-0.02</td>\n",
+       "      <td>0.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>ABC News</td>\n",
+       "      <td>Trump's Indictment</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.41</td>\n",
+       "      <td>-0.01</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>BBC</td>\n",
+       "      <td>Supreme Court Ruling on Affirmative Action</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>-0.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>BBC</td>\n",
+       "      <td>Chinese Surveillance Balloon</td>\n",
+       "      <td>-0.01</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>-0.02</td>\n",
+       "      <td>-0.02</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     source                                       topic  polarity_score  \\\n",
+       "0  ABC News  Supreme Court Ruling on Affirmative Action            0.03   \n",
+       "1  ABC News                Chinese Surveillance Balloon           -0.00   \n",
+       "2  ABC News         Biden's Low Approval Rates in Polls            0.14   \n",
+       "3  ABC News               The Deadliest Attack by Hamas            0.06   \n",
+       "4  ABC News                     Pentagon Documents Leak           -0.02   \n",
+       "5  ABC News      George Santos' Expulsion from Congress            0.09   \n",
+       "6  ABC News      U.S. and Germany Send Tanks to Ukraine            0.02   \n",
+       "7  ABC News                          Trump's Indictment            0.15   \n",
+       "8       BBC  Supreme Court Ruling on Affirmative Action            0.08   \n",
+       "9       BBC                Chinese Surveillance Balloon           -0.01   \n",
+       "\n",
+       "   subjectivity_score  average_polarity_for_topic  \\\n",
+       "0                0.40                        0.04   \n",
+       "1                0.34                        0.01   \n",
+       "2                0.41                        0.15   \n",
+       "3                0.36                        0.02   \n",
+       "4                0.27                        0.00   \n",
+       "5                0.47                        0.12   \n",
+       "6                0.36                        0.04   \n",
+       "7                0.43                        0.16   \n",
+       "8                0.31                        0.04   \n",
+       "9                0.35                        0.01   \n",
+       "\n",
+       "   average_subjectivity_for_topic  polarity_diff_from_mean  \\\n",
+       "0                            0.35                    -0.01   \n",
+       "1                            0.37                    -0.01   \n",
+       "2                            0.40                    -0.01   \n",
+       "3                            0.36                     0.04   \n",
+       "4                            0.35                    -0.02   \n",
+       "5                            0.42                    -0.03   \n",
+       "6                            0.31                    -0.02   \n",
+       "7                            0.41                    -0.01   \n",
+       "8                            0.35                     0.04   \n",
+       "9                            0.37                    -0.02   \n",
+       "\n",
+       "   subjectivity_diff_from_mean  \n",
+       "0                         0.05  \n",
+       "1                        -0.03  \n",
+       "2                         0.01  \n",
+       "3                         0.00  \n",
+       "4                        -0.08  \n",
+       "5                         0.05  \n",
+       "6                         0.05  \n",
+       "7                         0.02  \n",
+       "8                        -0.04  \n",
+       "9                        -0.02  "
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores_df = pd.DataFrame({'source':tfidf_df['article_source'], 'topic':tfidf_df['article_topic']})\n",
+    "\n",
+    "polarity_scores = []\n",
+    "subjectivity_scores = []\n",
+    "\n",
+    "for article in article_docs:\n",
+    "    polarity_scores.append(round(TextBlob(article).sentiment.polarity, 2))\n",
+    "    subjectivity_scores.append(round(TextBlob(article).sentiment.subjectivity, 2))\n",
+    "\n",
+    "scores_df['polarity_score'] = polarity_scores\n",
+    "scores_df['subjectivity_score'] = subjectivity_scores\n",
+    "\n",
+    "average_topic_polarity_scores = []\n",
+    "\n",
+    "for topic in scores_df['topic'].value_counts().index:\n",
+    "    mean_score = round(scores_df[scores_df['topic'] == topic]['polarity_score'].mean(), 2)\n",
+    "    average_topic_polarity_scores.append(mean_score)\n",
+    "\n",
+    "scores_df['average_polarity_for_topic'] = average_topic_polarity_scores * 9\n",
+    "\n",
+    "average_topic_subjectivity_scores = []\n",
+    "\n",
+    "for topic in scores_df['topic'].value_counts().index:\n",
+    "    mean_score = round(scores_df[scores_df['topic'] == topic]['subjectivity_score'].mean(), 2)\n",
+    "    average_topic_subjectivity_scores.append(mean_score)\n",
+    "\n",
+    "scores_df['average_subjectivity_for_topic'] = average_topic_subjectivity_scores * 9\n",
+    "\n",
+    "scores_df['polarity_diff_from_mean'] = scores_df['polarity_score'] - scores_df['average_polarity_for_topic']\n",
+    "scores_df['subjectivity_diff_from_mean'] = scores_df['subjectivity_score'] - scores_df['average_subjectivity_for_topic']\n",
+    "\n",
+    "\n",
+    "scores_df.iloc[:10, :]\n",
+    "#average_topic_polarity_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
