Improve output of models, add pic to blog, work on references.

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -67,3 +67,129 @@
 	YEAR = {2023},
 	JOURNAL = {ABC News}
 }
+
+@ARTICLE{cnnaffirmative,
+	AUTHOR = {Ariane de Vogue and Devan Cole and Tierney Sneed},
+	TITLE = {Supreme Court guts affirmative action in college admissions},
+	YEAR = {2023},
+	JOURNAL = {CNN}
+}
+
+@ARTICLE{nycaffirmative,
+	AUTHOR = {Zach Montague},
+	TITLE = {Rejection of Affirmative Action Draws Strong Reactions From Right and Left},
+	YEAR = {2023},
+	JOURNAL = {The New York Times}
+}
+
+@ARTICLE{wpaffirmative,
+	AUTHOR = {Robert Barnes},
+	TITLE = {Supreme Court rejects race-based affirmative action in college admissions},
+	YEAR = {2023},
+	JOURNAL = {The Washington Post}
+}
+
+@ARTICLE{foxaffirmative,
+	AUTHOR = {Anders Hagstrom and Brianna Herlihy and Bill Mears and Shannon Bream and Haley Chi-Sing},
+	TITLE = {Supreme Court rejects affirmative action in ruling on universities using race in admissions decisions},
+	YEAR = {2023},
+	JOURNAL = {Fox News}
+}
+
+@ARTICLE{nypaffirmative,
+	AUTHOR = {Samuel Chamberlain},
+	TITLE = {Supreme Court outlaws affirmative action in college admissions in landmark decision},
+	YEAR = {2023},
+	JOURNAL = {New York Post}
+}
+
+@ARTICLE{nbcaffirmative,
+	AUTHOR = {Lawrence Hurley},
+	TITLE = {Supreme Court strikes down college affirmative action programs},
+	YEAR = {2023},
+	JOURNAL = {NBC News}
+}
+
+@ARTICLE{wsjaffirmative,
+	AUTHOR = {Jess Bravin},
+	TITLE = {Supreme Court Strikes Down Affirmative Action in College Admissions},
+	YEAR = {2023},
+	JOURNAL = {The Wall Street Journal}
+}
+
+@ARTICLE{bbcaffirmative,
+	AUTHOR = {Bernd Debusmann Jr},
+	TITLE = {Affirmative action: US Supreme Court overturns race-based college admissions},
+	YEAR = {2023},
+	JOURNAL = {BBC}
+}
+
+@ARTICLE{abcaffirmative,
+	AUTHOR = {Devin Dwyer and Alexandra Hutzler},
+	TITLE = {Supreme Court effectively ends affirmative action at colleges in landmark ruling},
+	YEAR = {2023},
+	JOURNAL = {ABC News}
+}
+
+@ARTICLE{cnnbiden,
+	AUTHOR = {Ariel Edwards-Levy},
+	TITLE = {Biden gets low marks on Israel, particularly from young voters, new polling finds},
+	YEAR = {2023},
+	JOURNAL = {CNN}
+}
+
+@ARTICLE{nytbiden,
+	AUTHOR = {Reid J. Epstein and Lisa Lerer},
+	TITLE = {Democrats in Key States Worry Biden Could Be a Drag on Their Races},
+	YEAR = {2023},
+	JOURNAL = {The New York Times}
+}
+
+@ARTICLE{wpbiden,
+	AUTHOR = {Tyler Pager},
+	TITLE = {Biden said to be increasingly frustrated by dismal poll numbers},
+	YEAR = {2023},
+	JOURNAL = {The Washington Post}
+}
+
+@ARTICLE{foxbiden,
+	AUTHOR = {Paul Steinhauser},
+	TITLE = {Biden approval rating sinks to all-time low in new national poll},
+	YEAR = {2023},
+	JOURNAL = {Fox News}
+}
+
+@ARTICLE{nypbiden,
+	AUTHOR = {Josh Christenson},
+	TITLE = {Biden polls lower than any president in over 40 years with two-thirds of Americans saying economy getting worse},
+	YEAR = {2023},
+	JOURNAL = {New York Post}
+}
+
+@ARTICLE{nbcbiden,
+	AUTHOR = {Mark Murray},
+	TITLE = {What Biden’s rough 2023 in the polls means — and doesn’t mean — for 2024},
+	YEAR = {2023},
+	JOURNAL = {NBC News}
+}
+
+@ARTICLE{wsjbiden,
+	AUTHOR = {William A. Galsto},
+	TITLE = {Amid Dismal Polls, the Optimist’s Case for Biden Falters},
+	YEAR = {2023},
+	JOURNAL = {The Wall Street Journal}
+}
+
+@ARTICLE{bbcbiden,
+	AUTHOR = {Sam Cabral},
+	TITLE = {US presidential election 2024: Joe Biden's Democratic challengers},
+	YEAR = {2023},
+	JOURNAL = {BBC}
+}
+
+@ARTICLE{abcbiden,
+	AUTHOR = {Tal Axelrod},
+	TITLE = {Biden keeps polling poorly and other Democrats keep winning anyway. Why?},
+	YEAR = {2023},
+	JOURNAL = {ABC News}
+}
