--- a/doc/blog.qmd
+++ b/doc/blog.qmd
@@ -1,7 +1,7 @@
 ---
-title: "My awesome blog"
+title: "How Differently Do News Sources Report on the Same Events?"
 subtitle: "Spring 2024"
-author: "Prof. Yuster"
+author: "Kamila Palys"
 bibliography: references.bib
 number-sections: false
 format:
@@ -16,8 +16,7 @@ jupyter: python3
 ---
 
 
-![Source: Ramapo College of New Jersey](https://www.ramapo.edu/tours/wp-content/uploads/sites/344/2020/10/Fall-Arch-Straigh-Edit.jpg){fig-alt="A photo of the arch at Ramapo College."}
-
+![Source: Unsplash](newspaper.jpg){fig-alt="A man reading a newspaper."}
 
 # Welcome
 
